// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container with title 1`] = `
<div
  className="flexBox flexColumn container wide"
>
  <h2>
    title 1
  </h2>
  <div>
    text1
  </div>
</div>
`;

exports[`Container without title 1`] = `
<div
  className="flexBox flexColumn container wide"
>
  <div>
    text1
  </div>
</div>
`;
